[gd_scene load_steps=11 format=2]

[ext_resource path="res://TitleScreenRelated/GameModeScreen.gd" type="Script" id=1]
[ext_resource path="res://TitleScreenRelated/WindowDialog.gd" type="Script" id=2]
[ext_resource path="res://TitleScreenRelated/output-onlinepngtools.png" type="Texture" id=3]
[ext_resource path="res://TitleScreenRelated/montserrat_36.tres" type="DynamicFont" id=4]
[ext_resource path="res://SoundEffects/274787__setuniman__intro-1l72.wav" type="AudioStream" id=5]
[ext_resource path="res://TitleScreenRelated/Intro Song.gd" type="Script" id=6]
[ext_resource path="res://TitleScreenRelated/gamemode3.png" type="Texture" id=7]
[ext_resource path="res://TitleScreenRelated/notHovered80px.png" type="Texture" id=8]
[ext_resource path="res://TitleScreenRelated/hovered80px.png" type="Texture" id=9]
[ext_resource path="res://smallfont.tres" type="DynamicFont" id=10]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Insert Name Dialog" type="WindowDialog" parent="."]
visible = true
margin_left = 30.0
margin_top = 162.0
margin_right = 354.0
margin_bottom = 232.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/scaleborder_size = 0
window_title = "Insert Your Name"
script = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="Insert Name Dialog"]
margin_left = 122.0
margin_top = 9.972
margin_right = 202.0
margin_bottom = 32.972
align = 1

[node name="Play" type="Button" parent="Insert Name Dialog"]
margin_left = 143.0
margin_top = 38.781
margin_right = 181.0
margin_bottom = 58.781
text = "Play"

[node name="Menu" type="VBoxContainer" parent="."]
editor/display_folded = true
visible = false
margin_left = 30.0
margin_top = 30.0
margin_right = 354.0
margin_bottom = 354.0

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 324.0
margin_bottom = 128.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 132.0
margin_right = 324.0
margin_bottom = 336.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 324.0
margin_bottom = 204.0
rect_pivot_offset = Vector2( -801.729, -46.2363 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PVP" type="Button" parent="Menu/CenterRow/Buttons"]
margin_right = 324.0
margin_bottom = 48.0
rect_min_size = Vector2( 324, 48 )
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/PVP"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "PVP"

[node name="PVP ShareScreen" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 52.0
margin_right = 324.0
margin_bottom = 100.0
rect_min_size = Vector2( 324, 48 )
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/PVP ShareScreen"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "PVP ShareScreen"

[node name="PVE" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 104.0
margin_right = 324.0
margin_bottom = 152.0
rect_min_size = Vector2( 324, 48 )
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/PVE"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "PVE"

[node name="Back" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 156.0
margin_right = 324.0
margin_bottom = 204.0
rect_min_size = Vector2( 324, 48 )
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Back"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Back"

[node name="PlayerSearchTimeout" type="Timer" parent="."]

[node name="Intro Song" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 10.0
pitch_scale = 1.15
autoplay = true
script = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 50
custom_constants/margin_left = 20
custom_constants/margin_bottom = 0

[node name="Gamemode" type="VBoxContainer" parent="MarginContainer"]
margin_left = 150.0
margin_top = 50.0
margin_right = 650.0
margin_bottom = 800.0
size_flags_horizontal = 4
custom_constants/separation = 50

[node name="Gamemode_Logo" type="TextureRect" parent="MarginContainer/Gamemode"]
margin_right = 500.0
margin_bottom = 100.0
texture = ExtResource( 7 )

[node name="Menu" type="VBoxContainer" parent="MarginContainer/Gamemode"]
margin_top = 150.0
margin_right = 500.0
margin_bottom = 530.0
custom_constants/separation = 20

[node name="vsOnline_Button" type="TextureButton" parent="MarginContainer/Gamemode/Menu"]
margin_right = 500.0
margin_bottom = 80.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="vsOnline" type="Label" parent="MarginContainer/Gamemode/Menu/vsOnline_Button"]
margin_left = 80.0
margin_right = 452.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 10 )
text = "vs on line"

[node name="vsLocal_Button" type="TextureButton" parent="MarginContainer/Gamemode/Menu"]
margin_top = 100.0
margin_right = 500.0
margin_bottom = 180.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="vsLocal" type="Label" parent="MarginContainer/Gamemode/Menu/vsLocal_Button"]
margin_left = 80.0
margin_right = 398.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 10 )
text = "vs local"

[node name="vsCom_Button" type="TextureButton" parent="MarginContainer/Gamemode/Menu"]
margin_top = 200.0
margin_right = 500.0
margin_bottom = 280.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="vsCom" type="Label" parent="MarginContainer/Gamemode/Menu/vsCom_Button"]
margin_left = 80.0
margin_right = 310.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 10 )
text = "vs com"

[node name="Back_Button" type="TextureButton" parent="MarginContainer/Gamemode/Menu"]
margin_top = 300.0
margin_right = 500.0
margin_bottom = 380.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="Label" type="Label" parent="MarginContainer/Gamemode/Menu/Back_Button"]
margin_left = 80.0
margin_right = 256.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 10 )
text = "back"
[connection signal="pressed" from="Insert Name Dialog/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/PVP" to="Insert Name Dialog" method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/PVP ShareScreen" to="." method="_on_PVP_ShareScreen_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/PVE" to="." method="_on_PVE_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Back" to="." method="_on_Back_pressed"]
[connection signal="timeout" from="PlayerSearchTimeout" to="." method="_on_PlayerSearchTimeout_timeout"]
[connection signal="finished" from="Intro Song" to="Intro Song" method="_on_Intro_Song_finished"]
[connection signal="pressed" from="MarginContainer/Gamemode/Menu/vsOnline_Button" to="Insert Name Dialog" method="_on_vsOnline_Button_pressed"]
[connection signal="pressed" from="MarginContainer/Gamemode/Menu/vsOnline_Button" to="." method="_on_vsOnline_Button_pressed"]
[connection signal="pressed" from="MarginContainer/Gamemode/Menu/vsLocal_Button" to="." method="_on_vsLocal_Button_pressed"]
[connection signal="pressed" from="MarginContainer/Gamemode/Menu/vsCom_Button" to="." method="_on_vsCom_Button_pressed"]
[connection signal="pressed" from="MarginContainer/Gamemode/Menu/Back_Button" to="." method="_on_Back_Button_pressed"]
